--- a/Views/Planeamento/Metas.cshtml
+++ b/Views/Planeamento/Metas.cshtml
@@ -33,7 +33,7 @@
 
                 <!-- Botão para submeter o formulário -->
                 <div class="col-md-2">
-                    <button type="submit" class="btn btn-primary w-100 py-2 fw-bold">SALVAR</button>
+                    <button type="submit" class="btn btn-primary w-100 py-2 fw-bold">GUARDAR</button>
                 </div>
             </form>
         </div>
