--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -31,7 +31,7 @@
     @* Formulário para fazer logout com botão *@
     <form asp-controller="Account" asp-action="LogOut" method="post" id="logoutForm">
         <button type="submit" class="btn logout-btn">
-            <i class="fas fa-play fa-flip-horizontal"></i> LOGOUT
+            <i class="fas fa-play fa-flip-horizontal"></i> SAIR
         </button>
     </form>
 </div>
@@ -41,10 +41,10 @@ else
 @* Se o utilizador NÃO estiver autenticado, mostra botões de registo e login *@
 <ul class="nav navbar-nav navbar-right d-flex align-items-center">
     <li class="me-2">
-        <a class="btn register-btn" asp-controller="Account" asp-action="Registration">REGISTER</a>
+        <a class="btn register-btn" asp-controller="Account" asp-action="Registration">REGISTAR</a>
     </li>
     <li>
-        <a class="btn login-btn" asp-controller="Account" asp-action="Login"> LOGIN <i class="fas fa-play"></i></a>
+        <a class="btn login-btn" asp-controller="Account" asp-action="Login"> ENTRAR <i class="fas fa-play"></i></a>
     </li>
 </ul>
 }
