--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -49,7 +49,7 @@
     </div>
 
     <div class="box box-despesas">
-        <h4>Categorias de Despesas</h4>
+        <h4>Despesas</h4>
         <table>
             <thead>
                 <tr><th>Categoria</th><th>Valor</th></tr>
