--- a/Views/Planeamento/Orcamento.cshtml
+++ b/Views/Planeamento/Orcamento.cshtml
@@ -30,7 +30,7 @@
                 <!-- Botão para guardar -->
                 <div class="col-md-2">
                     <button type="submit" class="btn btn-primary w-100 py-2 fw-bold">
-                        SALVAR
+                        GUARDAR
                     </button>
                 </div>
             </form>
