--- a/Views/Transacao/Transacoes.cshtml
+++ b/Views/Transacao/Transacoes.cshtml
@@ -66,7 +66,7 @@
 
             <!-- Botão de submissão do formulário -->
             <div class="col-md-3 offset-md-9">
-                <button type="submit" class="btn btn-primary w-100 py-2 fw-bold">GUARDAR</button>
+                <button type="submit" class="btn btn-dark w-100 py-2 fw-bold">GUARDAR</button>
             </div>
         </form>
     </div>
