--- a/Views/Home/Apresentacao.cshtml
+++ b/Views/Home/Apresentacao.cshtml
@@ -10,7 +10,7 @@
     <p class="lead">A tua plataforma de gestão financeira pessoal de forma simples, visual e eficiente.</p>
     @if (!User.Identity.IsAuthenticated)
     {
-        <a href="/Account/Login" class="btn btn-primary btn-sm mt-3 px-4 py-2 d-inline-block">Começa Agora</a>
+        <a href="/Account/Login" class="btn btn-dark btn-sm mt-3 px-4 py-2 d-inline-block">Começa Agora</a>
     }
 </div>
 
