Adição de uma nova relação
Foi adiciona uma nova tabela para criar uma nova relação.
Alterações básicas finais

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -116,6 +116,9 @@
         <div class="register-link">
             Não tem conta? <a asp-action="Registration">Clique aqui</a> para criar
         </div>
+
+        <!-- Link para voltar atrás -->
+        <a asp-controller="Home" asp-action="Apresentacao">Voltar</a>
     </div>
 
     @section Scripts {
