--- a/Views/Account/Registration.cshtml
+++ b/Views/Account/Registration.cshtml
@@ -154,6 +154,10 @@
         <div class="login-link">
             Já tem conta? <a asp-action="Login">Clique aqui</a> para entrar
         </div>
+
+        <!-- Link para voltar atrás -->
+        <a asp-controller="Home" asp-action="Apresentacao">Voltar</a>
+
     </div>
 
     @section Scripts {
