--- a/Views/Home/Apresentacao.cshtml
+++ b/Views/Home/Apresentacao.cshtml
@@ -43,7 +43,7 @@
     <!-- Secção com preview do dashboard -->
     <div class="row text-center mt-5">
         <div class="col-md-6 offset-md-3">
-            <h4>Dashboard Visual</h4>
+            <h4>Painel Visual</h4>
             <p>Analisa o teu saldo, evolução diária, categorias de despesa e metas tudo num só lugar!</p>
             <img src="~/dashboard.png" alt="Dashboard" class="img-fluid shadow rounded" />
         </div>
