--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -102,10 +102,10 @@
         </main>
     </div>
 
-    @* Rodapé com copyright *@
-    <footer class="footer text-muted mt-5">
-        <div class="container">
-            &copy; 2025 - MoneyWise
+    @* Rodapé *@
+    <footer class="bg-white shadow-sm mt-5">
+        <div class="container text-center py-2 border-top">
+            <span class="text-muted mb-0">&copy; 2025 - MoneyWise</span>
         </div>
     </footer>
 
